[package]
name = "pep8replies"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "^0.10.9", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = "1.0"
serde_json = "1.0"
