[package]
name = "pep8replies"
version = "0.1.1"
edition = "2021"

[dependencies]
serenity = { version = "^0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
serenity_ctrlc = "0.3.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = "1.0"
serde_json = "1.0"
